public/assets/css/style.css
/* Overall Styles */
h1 {
    font-family: 'Raleway', sans-serif;
    font-size: 5rem;
}

h2 {
    font-family: 'Raleway', sans-serif;
    font-size: 4rem;
    margin-bottom: 1%;
}

.jumbo {
    min-width: 380px;
    display: block;
    margin: auto;
    text-align: center;
}

button {
    border-radius: 0;
    border: none;
}

#logo {
    width: 300px;
}

/* Waiting and Devoured Sections */
.columns {
    min-width: 300px;
    width: 100%;
    text-align: center;
}

ul {
    list-style: none;
    padding: 0;
}

li {
    margin-bottom: 2%;
}

.burger-button {
    width: 100%;
    padding: 2%;
    font-size: 2rem;
}

.btn-group {
    width: 100%;
}

.waiting {
    background-color: #ffba08;
}

.devoured {
    background-color: #e63946;
    color: #ffffff;
}

.delete-button {
    width: 50px;
    background-color: #ffffff;
}

/* Add Burger Form Styles */
.add-burger-form {
    margin-top: 5%;
    width: auto;
}

.add-burger-form input {
    padding-top: 5%;
    padding-bottom: 5%;
    width: auto;
}

.add-button {
    color: #ffba08;
    background-color: #e63946;
    width: auto;
    opacity: 0.8;
}

.add-button:hover {
    opacity: 1.0;
}

/* Show the trash icon when burger button is hovered over */
li:hover .delete-button {
    display: inline;
}

/* Show the dimmed version of the delete icon when sibling burger button is hovered over */
.burger-button:hover+.delete-button {
    opacity: 0.1;
}

/* Make the button more opaque when directly hovered on */
.delete-button:hover {
    opacity: 1.0;
}

small {
    font-style: italic;
}

/* Styles to target larger devices... */
/* On large desktop devices, hide the delete button until hovering */
/* Make h2s smaller since side by side */
@media (min-width: 1000px) {
    h2 {
        font-size: 2rem;
    }

    .delete-button {
        display: none;
    }

    .burger-button {
        font-size: 1rem;
    }

    /* Dont need larger input on desktop */
    .add-burger-form input {
        padding-top: 1%;
        padding-bottom: 1%;
    }
}

/* Styles to target touch-screen devices */
/* Always show the delete icon on devices with a touch screen */
@media (pointer:coarse) {
    .delete-button {
        display: inline;
        font-size: 1.2rem;
        opacity: 0.5;
        width: 100px;
    }

    /* Make the input form, placeholder, and button text bigger on touch devices */
    input,
    input::placeholder,
    .add-button {
        font-size: 1.5rem;
    }
}

